Fix: datepicker and time autocomplete have proper z-index.

--- a/less/autocomplete.less
+++ b/less/autocomplete.less
@@ -41,4 +41,5 @@
   width: 150px;
   height: 250px;
   overflow-y: scroll;
+  z-index: 11;/*To be on top of .settings-pane.*/
 }
