--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -220,4 +220,5 @@ td.goog-date-picker-selected, td.goog-date-picker-selected-pre{
 .rflect-input-datepicker {
   position: absolute;
   width: 170px;
+  z-index: 11;/*To be on top of .settings-pane.*/
 }
